--- a/monApp/templates/base.html
+++ b/monApp/templates/base.html
@@ -22,9 +22,8 @@
                            id="auteursDropdown" role="button" data-bs-toggle="dropdown"
                            aria-expanded="false">Auteurs</a>
                         <ul class="dropdown-menu" aria-labelledby="auteursDropdown">
-                            <li>
-                                <a class="dropdown-item" href="{{ url_for('getAuteurs') }}">Liste des auteurs</a>
-                            </li>
+                            <li><a class="dropdown-item" href="{{ url_for('getAuteurs') }}">Liste des auteurs</a></li>
+                            <li><a class="dropdown-item" href="{{ url_for('createAuteur') }}">Créer un auteur</a></li>
                         </ul>
                     </li>
                     <li class="nav-item dropdown">
