--- a/monApp/templates/livres_list.html
+++ b/monApp/templates/livres_list.html
@@ -29,9 +29,12 @@
                 <td><div class="task-controls">
                     <a href="{{ url_for('viewLivre', idL=unLivre.idL) }}" class="btn btn-nfo">
                     Voir <i class="fas fa-eye"></i></a>
-                    <a href="{{ url_for('UpdateLivre', idL=unLivre.idL) }}" class="btn btn-warning">
-                    Editer <i class="fas fa-pen"></i></a>
                     </div>
+                </td>
+                <td>
+                    {% if current_user.is_authenticated %}
+                        <a href="{{ url_for('UpdateLivre', idL=unLivre.idL) }}" class="btn btn-warning">Editer <i class="fas fa-pen"></i></a>
+                    {% endif %}
                 </td>
             </tr>
         {% endfor %}
