--- a/monApp/templates/base.html
+++ b/monApp/templates/base.html
@@ -48,7 +48,15 @@
                         <a class="navbar-brand"><em>Vous êtes connecté <strong>{{ current_user.Login}}</strong></em></a>
                         <li class="nav-item"><a class="nav-link" href="{{ url_for ('logout') }}">Déconnexion</a></li >
                     {% else %}
-                        <li class="nav-item"><a class="nav-link" href="{{ url_for ('login') }}">Se connecter</a></li >
+                        <li class="nav-item dropdown">
+                            <a class="nav-link dropdown-toggle" href="#" id="accountDropdown" role="button" data-bs-toggle="dropdown" aria-expanded="false">
+                                Compte
+                            </a>
+                            <ul class="dropdown-menu dropdown-menu-end" aria-labelledby="accountDropdown">
+                                <li><a class="dropdown-item" href="{{ url_for('login') }}">Se connecter</a></li>
+                                <li><a class="dropdown-item" href="{{ url_for('register') }}">Créer un compte</a></li>
+                            </ul>
+                        </li>
                     {% endif %}
                 </ul>
             </div>
