--- a/monApp/templates/livre_view.html
+++ b/monApp/templates/livre_view.html
@@ -1,6 +1,6 @@
 {% extends "base.html" %}
 {% block main %}
-<h1 >Consultation du prix du livre {{ selectedLivre.Prix }}</h1>
+<h1 >Consultation du prix du livre {{ selectedLivre.Titre }}</h1>
 <form role="form" method="POST" action="">
     {{ viewForm.hidden_tag () }}
     <div class="form-group mb-3">
