--- a/monApp/templates/register.html
+++ b/monApp/templates/register.html
@@ -3,8 +3,8 @@
 <div class="container">
     <div class="row">
         <div class="col-md-6 offset-md-3">
-            <h1 class="my-4">Se connecter</h1>
-            <form class="form-horizontal" role="form" method="POST" action="{{ url_for('login') }}">
+            <h1 class="my-4">Créer un compte</h1>
+            <form method="POST" action="">
                 {{ form.hidden_tag() }}
                 <div class="form-group mb-3">
                     {{ form.Login.label(class="form-control-label") }}
@@ -14,13 +14,12 @@
                     {{ form.Password.label(class="form-control-label") }}
                     {{ form.Password(class="form-control") }}
                 </div>
-                <div class="form-group">
-                    <button type="submit" class="btn btn-success">Se connecter</button>
+                <div class="form-group mb-3">
+                    {{ form.ConfirmPassword.label(class="form-control-label") }}
+                    {{ form.ConfirmPassword(class="form-control") }}
                 </div>
+                <button type="submit" class="btn btn-success">S'inscrire</button>
             </form>
-                <small class="text-muted">
-                    Pas encore de compte ? <a class="ml-2" href="{{ url_for('register') }}">Créer un compte</a>
-                </small>
         </div>
     </div>
 </div>
