--- a/monApp/templates/auteurs_list.html
+++ b/monApp/templates/auteurs_list.html
@@ -11,7 +11,7 @@
                 <th>ID</th>
                 <th>Nom</th>
                 <th>Nombre de livres</th>
-                <th>Action possible</th>
+                <th>Visualisation</th>
                 <th>Modifier / Supprimer</th>
                 <th>Liste des titres</th>
             </tr>
