--- a/monApp/templates/livres_list.html
+++ b/monApp/templates/livres_list.html
@@ -14,7 +14,8 @@
                 <th>Url</th>
                 <th>Première de couverture</th>
                 <th>Auteur</th>
-                <th>Actions possibles</th>
+                <th>Visualisation</th>
+                <th>Modifier</th>
             </tr>
         </thead>
         <tbody>
